# anchore-mcp

./: .gitignore  AGENTS.md  MEMORY.md  README.md  config.example.yaml  env.example  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.cursor/rules/: knowledge-flow-memory-solutions.mdc
.github/workflows/: ci.yml
docs/: remediation-handoff-schema.md
docs/brainstorms/: 2026-04-02-anchore-enterprise-mcp-requirements.md  2026-04-03-image-reference-digest-resolution-requirements.md
docs/ideation/: 2026-04-03-anchore-mcp-v2-ideation.md
docs/plans/: 2026-04-02-001-feat-anchore-enterprise-mcp-plan.md  2026-04-03-001-feat-image-reference-digest-resolution-plan.md
docs/research/: anchore-api-notes.md
examples/codex-agent-setup/: README.md
scripts/: check.py  smoke_wheel.py
src/: index.ts
src/anchore/: api-paths.test.ts  api-paths.ts  client.test.ts  client.ts  errors.ts  image-records.test.ts  image-records.ts  image-selection.test.ts  image-selection.ts  image-tag-summary-capabilities.ts  image-tag-summary-pages.test.ts  image-tag-summary-pages.ts  list-images-pages.test.ts  list-images-pages.ts  openapi-fetch.test.ts  openapi-fetch.ts  openapi-list-images-params.test.ts  openapi-list-images-params.ts  policy-blocker-extract.test.ts  policy-blocker-extract.ts  resolve-image-reference.test.ts  resolve-image-reference.ts  retry-policy.test.ts  retry-policy.ts  vulnerability-records.test.ts  vulnerability-records.ts
src/anchore_mcp/: __main__.py  config.py  errors.py  runtime.py  server.py
tests/: test_package.py
(+126 files in other folders)
